--- a/loan-application-frontend/package.json
+++ b/loan-application-frontend/package.json
@@ -14,15 +14,22 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@hookform/resolvers": "3.1.1",
     "@nextui-org/react": "1.0.0-beta.13",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-router-dom": "6.14.1"
+    "react-hook-form": "7.45.1",
+    "react-input-mask": "2.0.4",
+    "react-number-format": "5.2.2",
+    "react-router-dom": "6.14.1",
+    "validation-br": "1.4.4",
+    "yup": "1.2.0"
   },
   "devDependencies": {
     "@types/node": "20.4.1",
     "@types/react": "18.2.14",
     "@types/react-dom": "18.2.6",
+    "@types/react-input-mask": "3.0.2",
     "@types/react-router-dom": "5.3.3",
     "@typescript-eslint/eslint-plugin": "5.61.0",
     "@typescript-eslint/parser": "5.61.0",
