--- a/loan-application-frontend/package.json
+++ b/loan-application-frontend/package.json
@@ -8,7 +8,7 @@
     "npm": ">=9.5.1"
   },
   "scripts": {
-    "dev": "vite",
+    "dev": "VITE_API_BASE_URL=http://localhost:5287 vite",
     "build": "tsc && vite build",
     "lint": "eslint src --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview"
